--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     document.addEventListener("DOMContentLoaded", () => {
       const els = document.querySelectorAll(".fade-in");
       const obs = new IntersectionObserver(entries => {
-        entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("visible"); });
+        entries.forEach(e => {
+          if (e.isIntersecting) e.target.classList.add("visible");
+        });
       }, { threshold: 0.1 });
       els.forEach(el => obs.observe(el));
     });
@@ -30,16 +32,16 @@
 
   <!-- Header -->
   <header class="text-center p-6 md:p-10 bg-white">
-    <h1 class="text-3xl md:text-5xl font-bold fade-in">Premium Flooring Solutions</h1>
+    <h1 class="text-3xl md:text-5xl font-bold fade-in">🏡 Premium Flooring Solutions</h1>
     <p class="mt-4 text-gray-700 fade-in">Installation, Repair & Custom Floor Services for Homes & Businesses</p>
     <a href="#quote" class="inline-block mt-6 bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 text-lg rounded-2xl shadow-lg transition">
       Get a Free Quote
     </a>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Why Us -->
   <section class="grid md:grid-cols-2 gap-6 p-6 md:p-10 items-center bg-gray-50">
-    <img src="https://images.pexels.com/photos/4813586/pexels-photo-4813586.jpeg" alt="Wood floor installation" class="rounded-2xl shadow-lg h-64 md:h-full object-cover fade-in" />
+    <div class="text-6xl text-center md:text-left fade-in">🪵</div>
     <div class="fade-in">
       <h2 class="text-2xl font-semibold mb-4">Why Choose Us?</h2>
       <ul class="list-disc list-inside text-gray-700 space-y-2">
@@ -55,36 +57,37 @@
   <section class="bg-white p-6 md:p-10">
     <h2 class="text-2xl font-bold text-center mb-6">Our Services</h2>
     <div class="grid md:grid-cols-3 gap-6">
-      <div class="bg-gray-50 rounded-2xl shadow-lg overflow-hidden fade-in">
-        <img src="https://images.pexels.com/photos/13711724/pexels-photo-13711724.jpeg" alt="Floor installation" class="w-full h-48 object-cover" />
-        <div class="p-4">
-          <h3 class="font-semibold text-lg mb-1">Floor Installation</h3>
-          <p class="text-sm text-gray-600">We install hardwood, vinyl, tile and laminate with precision and care.</p>
-        </div>
+
+      <!-- Install -->
+      <div class="bg-gray-50 rounded-2xl shadow-lg p-6 text-center fade-in">
+        <div class="text-5xl mb-4">🔨</div>
+        <h3 class="font-semibold text-lg mb-1">Floor Installation</h3>
+        <p class="text-sm text-gray-600">We install hardwood, vinyl, tile and laminate with precision and care.</p>
       </div>
 
-      <div class="bg-gray-50 rounded-2xl shadow-lg overflow-hidden fade-in">
-        <img src="https://images.pexels.com/photos/5768206/pexels-photo-5768206.jpeg" alt="Floor repair tools" class="w-full h-48 object-cover" />
-        <div class="p-4">
-          <h3 class="font-semibold text-lg mb-1">Floor Repair</h3>
-          <p class="text-sm text-gray-600">Fixing damaged, warped or noisy floors with expert techniques.</p>
-        </div>
+      <!-- Repair -->
+      <div class="bg-gray-50 rounded-2xl shadow-lg p-6 text-center fade-in">
+        <div class="text-5xl mb-4">🧰</div>
+        <h3 class="font-semibold text-lg mb-1">Floor Repair</h3>
+        <p class="text-sm text-gray-600">Fixing damaged, warped or noisy floors with expert techniques.</p>
       </div>
 
-      <div class="bg-gray-50 rounded-2xl shadow-lg overflow-hidden fade-in">
-        <img src="https://images.pexels.com/photos/633844/pexels-photo-633844.jpeg" alt="Refinishing hardwood" class="w-full h-48 object-cover" />
-        <div class="p-4">
-          <h3 class="font-semibold text-lg mb-1">Floor Refinishing</h3>
-          <p class="text-sm text-gray-600">Give your wood floors a fresh, long-lasting look with our refinishing.</p>
-        </div>
+      <!-- Refinishing -->
+      <div class="bg-gray-50 rounded-2xl shadow-lg p-6 text-center fade-in">
+        <div class="text-5xl mb-4">🧼</div>
+        <h3 class="font-semibold text-lg mb-1">Floor Refinishing</h3>
+        <p class="text-sm text-gray-600">Give your wood floors a fresh, long-lasting look with our refinishing.</p>
       </div>
+
     </div>
   </section>
 
-  <!-- Contact / Quote -->
+  <!-- Quote -->
   <section id="quote" class="text-center p-6 md:p-10 bg-gray-100 fade-in">
     <h2 class="text-2xl font-bold mb-4">Need a Custom Quote?</h2>
-    <p class="mb-6 text-gray-700 max-w-xl mx-auto">Tell us about your flooring project – from new installations to complete renovations.</p>
+    <p class="mb-6 text-gray-700 max-w-xl mx-auto">
+      Tell us about your flooring project – from new installations to complete renovations.
+    </p>
     <a href="mailto:your-email@example.com?subject=Flooring%20Quote%20Request" class="bg-blue-600 hover:bg-blue-700 text-white text-lg px-10 py-4 rounded-2xl shadow-xl transition">
       Schedule a Consultation
     </a>
