--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- Why Us -->
   <section class="grid md:grid-cols-2 gap-6 p-6 md:p-10 items-center bg-gray-50">
-    <div class="text-6xl text-center md:text-left fade-in">🪵</div>
+    <div class="text-6xl text-center md:text-left fade-in">🏠</div>
     <div class="fade-in">
       <h2 class="text-2xl font-semibold mb-4">Why Choose Us?</h2>
       <ul class="list-disc list-inside text-gray-700 space-y-2">
@@ -74,9 +74,9 @@
 
       <!-- Refinishing -->
       <div class="bg-gray-50 rounded-2xl shadow-lg p-6 text-center fade-in">
-        <div class="text-5xl mb-4">🧼</div>
+        <div class="text-5xl mb-4">🪚</div>
         <h3 class="font-semibold text-lg mb-1">Floor Refinishing</h3>
-        <p class="text-sm text-gray-600">Give your wood floors a fresh, long-lasting look with our refinishing.</p>
+        <p class="text-sm text-gray-600">Restore the beauty of your floors with professional sanding and sealing.</p>
       </div>
 
     </div>
