--- a/index.html
+++ b/index.html
@@ -20,18 +20,44 @@
 
   <section class="grid md:grid-cols-2 gap-6 p-6">
     <div>
-      <h2 class="text-2xl font-semibold mb-2">Our Specializations</h2>
-      <ul class="list-disc pl-5 text-gray-700">
-        <li>Solid hardwoods (exotic and domestic species)</li>
-        <li>Sanding and finishing of new or existing hardwood floors</li>
-        <li>Staircases</li>
-        <li>Engineered wood, bamboo, laminate, and vinyl</li>
-        <li>Carpet</li>
-        <li>Tile and natural stone</li>
-        <li>Granite and countertops</li>
-        <li>Residential projects</li>
-        <li>+ more!</li>
-      </ul>
+      <h2 class="text-2xl font-semibold mb-4">Our Specializations</h2>
+      <div class="mb-4">
+        <h3 class="text-lg font-semibold mb-1">🪵 Hardwood & Wood Flooring</h3>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>Solid hardwoods (exotic and domestic species)</li>
+          <li>Sanding and finishing of new or existing hardwood floors</li>
+          <li>Staircases</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="text-lg font-semibold mb-1">🧱 Engineered & Synthetic</h3>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>Engineered wood</li>
+          <li>Bamboo</li>
+          <li>Laminate</li>
+          <li>Vinyl</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="text-lg font-semibold mb-1">🧶 Soft Flooring</h3>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>Carpet</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="text-lg font-semibold mb-1">🪨 Tile & Stone</h3>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>Tile and natural stone</li>
+          <li>Granite and countertops</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="text-lg font-semibold mb-1">🏠 Residential Projects</h3>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>All types of flooring for homes and apartments</li>
+          <li>+ more!</li>
+        </ul>
+      </div>
     </div>
     <div class="flex justify-center items-center">
       <div class="text-7xl">🏡</div>
@@ -39,7 +65,9 @@
   </section>
 
   <section class="p-6 text-center">
-    <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-full shadow hover:bg-blue-700 transition">Get a Free Quote</a>
+    <a href="tel:18662285733" class="bg-blue-600 text-white px-6 py-3 rounded-full shadow hover:bg-blue-700 transition">
+      📞 Call Now to Schedule
+    </a>
   </section>
 
   <footer class="text-xs text-gray-500 p-4 border-t text-center max-w-4xl mx-auto">
