--- a/index.html
+++ b/index.html
@@ -1,113 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flooring Services</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          animation: {
-            fadeIn: 'fadeIn 1s ease-in-out',
-          },
-          keyframes: {
-            fadeIn: {
-              '0%': { opacity: 0 },
-              '100%': { opacity: 1 },
-            }
-          }
-        }
-      }
-    }
-  </script>
-  <style>
-    body::before {
-      content: "\1F9F1";
-      font-size: 50px;
-      opacity: 0.05;
-      position: fixed;
-      top: -25%;
-      left: -25%;
-      width: 200%;
-      height: 200%;
-      z-index: -1;
-      transform: rotate(-45deg);
-      background-repeat: repeat;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-      grid-auto-rows: 50px;
-      text-align: center;
-      line-height: 50px;
-      color: #999;
-    }
-  </style>
-</head>
-<body class="bg-white text-gray-900 relative">
-  <header class="bg-gray-900 text-white p-4 text-center text-xl font-bold animate-fadeIn">
-    Professional Flooring Installation
-  </header>
+export default function FlooringLandingPage() {
+  return (
+    <div className="min-h-screen bg-white text-gray-900">
+      {/* Hero Section */}
+      <section className="bg-gradient-to-br from-yellow-100 to-yellow-50 py-16 px-6 text-center">
+        <h1 className="text-4xl md:text-5xl font-bold mb-4">Professional Flooring Services</h1>
+        <p className="text-lg md:text-xl mb-6 max-w-2xl mx-auto">
+          Brand-new flooring installed in just one day — no dust, no noise, no stress. Free on-site inspection.
+        </p>
+        <a href="tel:18662285733" className="inline-block bg-yellow-500 text-white text-lg font-semibold py-3 px-6 rounded-2xl shadow-lg hover:bg-yellow-600 transition">
+          📞 Call: 1-866-228-5733
+        </a>
+      </section>
 
-  <section class="p-6 text-center animate-fadeIn">
-    <h1 class="text-3xl font-bold mb-4">All Types of Flooring & Installation</h1>
-    <p class="max-w-xl mx-auto text-gray-700">
-      Flooring is our specialty — we are a professional flooring provider ready to realize your project of any size! Remember: the right floor, the right price, the right professionals.
-    </p>
-  </section>
+      {/* Services Section */}
+      <section className="py-16 px-6 grid gap-10 md:grid-cols-3">
+        <div className="bg-yellow-50 p-6 rounded-2xl shadow-md text-center">
+          <div className="text-4xl mb-4">🪵</div>
+          <h3 className="text-xl font-bold mb-2">Laminate Installation</h3>
+          <p>Fast, clean, and precise — professional flooring with warranty.</p>
+        </div>
+        <div className="bg-yellow-50 p-6 rounded-2xl shadow-md text-center">
+          <div className="text-4xl mb-4">🧱</div>
+          <h3 className="text-xl font-bold mb-2">Subfloor Leveling</h3>
+          <p>Perfect base for any flooring. We use only proven materials.</p>
+        </div>
+        <div className="bg-yellow-50 p-6 rounded-2xl shadow-md text-center">
+          <div className="text-4xl mb-4">🧰</div>
+          <h3 className="text-xl font-bold mb-2">Old Floor Removal</h3>
+          <p>We remove old flooring quickly and carefully. Cleanup included.</p>
+        </div>
+      </section>
 
-  <section class="grid md:grid-cols-2 gap-10 p-6">
-    <div class="bg-gray-100 p-6 rounded-lg shadow-md animate-fadeIn">
-      <h3 class="text-xl font-semibold mb-2">🪵 Hardwood & Wood Flooring</h3>
-      <ul class="list-disc pl-5 text-gray-700">
-        <li>Solid hardwoods (exotic and domestic species)</li>
-        <li>Sanding and finishing of new or existing hardwood floors</li>
-        <li>Staircases</li>
-      </ul>
+      {/* About Section */}
+      <section className="py-16 px-6 bg-yellow-100 text-center">
+        <h2 className="text-3xl font-bold mb-4">Why Choose Us?</h2>
+        <ul className="max-w-3xl mx-auto text-left text-lg space-y-3">
+          <li>✅ Free on-site estimate same day</li>
+          <li>✅ Transparent pricing — no hidden fees</li>
+          <li>✅ Up to 5-year warranty on all work</li>
+          <li>✅ Over 10 years of flooring experience</li>
+        </ul>
+      </section>
+
+      {/* Before/After Gallery */}
+      <section className="py-16 px-6 text-center">
+        <h2 className="text-3xl font-bold mb-8">Before & After</h2>
+        <div className="grid gap-6 md:grid-cols-2 max-w-5xl mx-auto">
+          <div>
+            <img src="/images/before1.jpg" alt="Before renovation" className="rounded-xl shadow-md" />
+            <p className="mt-2">Before: Worn-out laminate</p>
+          </div>
+          <div>
+            <img src="/images/after1.jpg" alt="After renovation" className="rounded-xl shadow-md" />
+            <p className="mt-2">After: Premium vinyl flooring</p>
+          </div>
+        </div>
+      </section>
+
+      {/* Testimonials */}
+      <section className="py-16 px-6 bg-yellow-50 text-center">
+        <h2 className="text-3xl font-bold mb-8">What Our Clients Say</h2>
+        <div className="grid gap-6 md:grid-cols-3 max-w-5xl mx-auto">
+          <div className="bg-white p-6 rounded-xl shadow">
+            <p className="italic">“Quick, clean, and professional. Our living room looks brand new!”</p>
+            <p className="mt-2 font-semibold">— Lisa M.</p>
+          </div>
+          <div className="bg-white p-6 rounded-xl shadow">
+            <p className="italic">“The team was on time and did a fantastic job leveling and installing.”</p>
+            <p className="mt-2 font-semibold">— John T.</p>
+          </div>
+          <div className="bg-white p-6 rounded-xl shadow">
+            <p className="italic">“No hidden costs, great service. Definitely recommending to friends.”</p>
+            <p className="mt-2 font-semibold">— Emily R.</p>
+          </div>
+        </div>
+      </section>
+
+      {/* Call to Action Section */}
+      <section className="py-12 px-6 text-center">
+        <h3 className="text-2xl font-semibold mb-4">Ready to transform your floors?</h3>
+        <p className="mb-6">Call us now and get a free consultation with no obligation.</p>
+        <a href="tel:18662285733" className="inline-block bg-yellow-500 text-white text-lg font-semibold py-3 px-6 rounded-2xl shadow-lg hover:bg-yellow-600 transition">
+          📞 1-866-228-5733
+        </a>
+      </section>
     </div>
-
-    <div class="bg-gray-100 p-6 rounded-lg shadow-md animate-fadeIn">
-      <h3 class="text-xl font-semibold mb-2">🧱 Engineered & Synthetic</h3>
-      <ul class="list-disc pl-5 text-gray-700">
-        <li>Engineered wood</li>
-        <li>Bamboo</li>
-        <li>Laminate</li>
-        <li>Vinyl</li>
-      </ul>
-    </div>
-
-    <div class="bg-gray-100 p-6 rounded-lg shadow-md animate-fadeIn">
-      <h3 class="text-xl font-semibold mb-2">🧶 Soft Flooring</h3>
-      <ul class="list-disc pl-5 text-gray-700">
-        <li>Carpet</li>
-      </ul>
-    </div>
-
-    <div class="bg-gray-100 p-6 rounded-lg shadow-md animate-fadeIn">
-      <h3 class="text-xl font-semibold mb-2">🪨 Tile & Stone</h3>
-      <ul class="list-disc pl-5 text-gray-700">
-        <li>Tile and natural stone</li>
-        <li>Granite and countertops</li>
-      </ul>
-    </div>
-
-    <div class="bg-gray-100 p-6 rounded-lg shadow-md animate-fadeIn col-span-full">
-      <h3 class="text-xl font-semibold mb-2">🏠 Residential Projects</h3>
-      <ul class="list-disc pl-5 text-gray-700">
-        <li>All types of flooring for homes and apartments</li>
-        <li>+ more!</li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="p-6 text-center animate-fadeIn">
-    <a href="tel:18662285733" class="bg-blue-600 text-white px-6 py-3 rounded-full shadow-lg hover:bg-blue-700 transition">
-      📞 Call Now to Schedule
-    </a>
-  </section>
-
-  <footer class="text-xs text-gray-500 p-4 border-t text-center max-w-4xl mx-auto animate-fadeIn">
-    Disclaimer: [This website] provides a free service to help homeowners connect with local service providers. All contractors/service providers are independent and [this website] does not provide any guarantees or warranties for any work performed. It is the responsibility of the homeowner to verify that the hired contractor has the necessary license and insurance required for the job. All persons depicted in photos or videos are actors or models and not the contractors listed on [this website].
-  </footer>
-</body>
-</html>
+  );
+}
